--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
         <!--WAR-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
