--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-spring-boot-starter</artifactId>
-            <version>1.0.0.beta3</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
@@ -64,6 +64,13 @@
             <version>2.8.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+
+
         <!--WAR-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -77,7 +84,7 @@
             <dependency>
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-bom</artifactId>
-                <version>7.4.5</version>
+                <version>7.5.6</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
