--- a/src/main/resources/config/application-dev.properties
+++ b/src/main/resources/config/application-dev.properties
@@ -2,3 +2,6 @@ datasource.dbPath=D:/Work/proj/tracker/db/tracker.dat
 
 #torrent
 torrent.savePath=d:/Downloads/tmp/.auto-torrent/
+
+#vaadin
+vaadin.servlet.productionMode=false
