--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <vaadin.plugin.version>7.5.6</vaadin.plugin.version>
+        <warName>tracker</warName>
     </properties>
 
     <dependencies>
@@ -93,6 +94,7 @@
     </dependencyManagement>
 
     <build>
+        <finalName>${warName}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
